# lobster-bot

./: .gitignore  Makefile  main.py  pyproject.toml
app/: HttpxPageFetcher.py  config.py
app/config/: AppConfig.py  __init__.py
app/ioc/: Container.py  MultiContainer.py  ReadableContainer.py  __init__.py
app/pages/: DuckDbPageRepository.py  Page.py  PageRepository.py  __init__.py  di.py
app/scraping/: di.py
app/scraping/fetcher/: CachedPageFetcher.py  HttpxPageFetcher.py  PageFetcher.py  __init__.py  di.py
app/scraping/scraper/: OpenAIScraper.py  PageScraper.py  ScrapedPage.py  __init__.py  di.py
