[project]
name = "vibely-news-scraper"
version = "0.1.0"
description = "Vibe-coded news and image scraper. LET'S GOOO!!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire~=0.7.0",
    "html-to-markdown~=1.4.0",
    "httpx~=0.28.1",
    "pyinstaller~=6.14.2",
    "python-dotenv~=1.1.1",
]
