[project]
name = "vibely-news-scraper"
version = "0.1.0"
description = "Vibe-coded news and image scraper. LET'S GOOO!!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb~=1.3.1",
    "fire~=0.7.0",
    "html-to-markdown~=1.4.0",
    "httpx~=0.28.1",
    "openai~=1.93.0",
    "pyinstaller~=6.14.2",
    "python-dotenv~=1.1.1",
]
