[project]
name = "lobster-bot"
version = "0.1.0"
description = "Site scraper and aggregator finding the best local seafood available."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb~=1.3.1",
    "fire~=0.7.0",
    "html-to-markdown~=1.4.0",
    "httpx~=0.28.1",
    "openai~=1.93.0",
    "pydantic~=2.11.7",
    "pyinstaller~=6.14.2",
    "python-dotenv~=1.1.1",
]
